changed swagger files
