# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "http://swagger.io/terms/",
     "basePath": "/",
     "paths": {
-        "/create-item": {
+        "/item": {
             "post": {
                 "description": "Create item",
                 "consumes": [
@@ -29,7 +29,46 @@
                 }
             }
         },
-        "/delete-item": {
+        "/item/{id}": {
+            "get": {
+                "description": "Get item by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "models.Item"
+                ],
+                "summary": "Get item",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Item"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "models.Item"
+                ],
+                "summary": "Update item",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete item",
                 "consumes": [
@@ -71,49 +110,6 @@
                                 "$ref": "#/definitions/handlers.Item"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/item{id}": {
-            "get": {
-                "description": "Get item by id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "models.Item"
-                ],
-                "summary": "Get item",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.Item"
-                        }
-                    }
-                }
-            }
-        },
-        "/update-item": {
-            "put": {
-                "description": "Update item",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "models.Item"
-                ],
-                "summary": "Update item",
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
